--- a/index.html
+++ b/index.html
@@ -1,101 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Marcin Grygo Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Gabriela&display&=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css" integrity="sha256-+dIh4jG2jQTHZwW81yUo8h6tzXWcNumyNL5XPZbwp1E=" crossorigin="anonymous" />
-    <link rel="icon" href="img/ikona stronyV1.png" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header class="colorfull" data-color="zeroC" id="headd">
-      <h1>Marcin Grygo</h1>
-      <nav>
-        <ul id="neons">
-          <li class="neon" id="neon1">Coding</li>
-          <li class="neon" id="neon2">Graphic</li>
-          <li class="neon" id="neon3">Animating</li>
-        </ul>
-        <div id="smilley"></div>
-        <button class="downButton" id="click0">Down</button>
-      </nav>
-    </header>
-    <main>
-      <div class="page">
-      <div class="section colorfull" data-color="oneC" id="first">
-        <article>
-          <button class="topButton" id="click1">top</button>
-          <h2>Projects</h2>
-          <ul>
-            <li>Wector Graphic</li>
-            <li>Film editing</li>
-            <li>Creating web paterns/ Web pages</li>
-            <li>Photo processing</li>
-          </ul>
-          <p>
-            Click -> to see my fafourites project I made by the last year of
-            learning
-          </p>
-          <button class="linkButton" id="linkFirst">
-            <a href="">Goooo</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Marcin Grygo Portfolio</title>
+  <link rel="shortcut icon" href="image/smile.png" />
+  <link rel="stylesheet" href="https://use.typekit.net/jvu3msl.css" />
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#ffd528" />
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#ffd528" />
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ffd528" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css"
+    integrity="sha256-+dIh4jG2jQTHZwW81yUo8h6tzXWcNumyNL5XPZbwp1E=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div id="loading"></div>
+  <div id="fullPage">
+    <section class="section header">
+      <div id="sign"></div>
+      <img id="sign2" src="image/neon2.png" alt="" />
+      <div id="neons">
+        <img class="neon" id="neon1" src="image/coding.png" alt="" />
+        <img class="neon" id="neon2" src="image/graphic.png" alt="" />
+        <img class="neon" id="neon3" src="image/animating.png" alt="" />
+      </div>
+      <div id="welcome"></div>
+    </section>
+    <section class="section s1">
+      <h2>Projects</h2>
+      <ul class="points">
+        <li>Click the button</li>
+        <li>to see projects I made</li>
+      </ul>
+      <div class="links">
+        <a href="project.html"><button class="linkButton">
+            CLICK ME
           </button>
-          <button class="downButton" id="click2">Down</button>
-        </article>
-      </div >
-
-      <div class=" section colorfull" data-color="twoC" id="second">
-        <article>
-          <button class="topButton" id="click3">top</button>
-          <h2>Learning and knowladge</h2>
-          <p>
-            Click -> to see past of my learning, but also things I want to
-            include to mi live in near future
-          </p>
-          <button class="linkButton" id="linkSecond">
-            <a href="">Goooo</a>
+        </a>
+      </div>
+      <div id="working"></div>
+    </section>
+    <section class="section s3">
+      <h2>About me</h2>
+      <ul class="points">
+        <li>Click the button</li>
+        <li>to know me better</li>
+      </ul>
+      <div class="links">
+        <a href="about.html"><button class="linkButton">
+            CLICK ME
           </button>
-          <button class="downButton" id="click4">Down</button>
-        </article>
-      </div >
+        </a>
+      </div>
 
-      <div class=" section colorfull" data-color="threeC" id="third">
-        <article>
-          <button class="topButton" id="click5">top</button>
-          <h2>My live</h2>
-          <p>
-            Click -> to know me better, read about me, my hobbies and my familie
-          </p>
-          <button class="linkButton" id="linkThird">
-            <a href="">Goooo</a>
-          </button>
-        </article>
-      </div >
-    </div>
-    </main>
+      <div id="reading"></div>
 
-    <footer>
-      <p>Page and all of the components was created by Marcin Grygo</p>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.js" integrity="sha256-caNcSA0LvOCX90PTuEbwl+V09xPMca13CJUasl+VCtk=" crossorigin="anonymous"></script>
+      <div id="footer">
+        <p>Page created by Marcin Grygo</p>
+      </div>
+    </section>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.js"
+    integrity="sha256-caNcSA0LvOCX90PTuEbwl+V09xPMca13CJUasl+VCtk=" crossorigin="anonymous"></script>
+</body>
+<script>
+  setTimeout(function () {
+    $('#loading').fadeToggle();
+  }, 2000);
 
-    <script>
-    new fullpage ('#fullPage', {
-      autoScrolling: true
-    })
-    </script>
-  </body>
 
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"
-  ></script>
-  <!-- <script src="WebAnim/SmileWebby.js"></script> -->
-  <script src="script.js"></script>
+</script>
+<script src="anime/lottie_welcome.js"></script>
+<script src="anime/lottie_Neon_sign.js"></script>
+<script src="anime/lottie_work.js"></script>
+<script src="anime/lottie_reading.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<!-- <script src="WebAnim/SmileWebby.js"></script> -->
+<script src="script.js"></script>
+
 </html>
